completing drivers, flyway, uts and integration tests