@@ -6,20 +6,16 @@ package com.jgranados.driversproject.controllers.driver;
 
 import com.jgranados.driversproject.dto.drivers.DriverResponseDTO;
 import com.jgranados.driversproject.dto.drivers.NewDriverRequestDTO;
+import com.jgranados.driversproject.dto.drivers.UpdateDriverRequestDTO;
 import com.jgranados.driversproject.exceptions.ServiceException;
 import com.jgranados.driversproject.services.drivers.DriverService;
-
-import java.util.List;
-import java.util.stream.Collectors;
-
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
 
 /**
  * @author
@@ -36,7 +32,7 @@ public class DriverController {
     }
 
     @PostMapping
-    public ResponseEntity<DriverResponseDTO> createDriver(@RequestBody NewDriverRequestDTO newDriver) throws ServiceException {
+    public ResponseEntity<DriverResponseDTO> createDriver(@RequestBody @Valid NewDriverRequestDTO newDriver) throws ServiceException {
         DriverResponseDTO responseDTO = driverService.createDriver(newDriver);
 
         return ResponseEntity
@@ -48,8 +44,30 @@ public class DriverController {
     public ResponseEntity<List<DriverResponseDTO>> findAllDrivers() {
         List<DriverResponseDTO> dtos = driverService.findAll().stream()
                 .map(DriverResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
+    @GetMapping(value = "/{id}")
+    public ResponseEntity<DriverResponseDTO> findById(@PathVariable Long id) throws ServiceException {
+        DriverResponseDTO dto = new DriverResponseDTO(driverService.findById(id));
+
+        return ResponseEntity.ok(dto);
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteDriver(@PathVariable Long driverId)
+            throws ServiceException {
+        driverService.deleteDriver(driverId);
+        return ResponseEntity.accepted().build();
+    }
+
+    @PutMapping("/{driverId}")
+    public ResponseEntity<DriverResponseDTO> updateDriver(@PathVariable Long driverId,
+                                                          @Valid @RequestBody UpdateDriverRequestDTO dataToUpdate)
+            throws ServiceException {
+        DriverResponseDTO responseDTO = driverService.updateDriver(driverId, dataToUpdate);
+
+        return ResponseEntity.ok(responseDTO);
+    }
 }
